;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executable
  (name objinfo)
  (modes byte native)
  (modules objinfo)
  (libraries ocamlcommon ocamlbytecomp ocamloptcomp))

(executables
 (names   make_opcodes cvt_emit)
 (modules make_opcodes cvt_emit))

(ocamllex
 (modules make_opcodes)
 (mode    fallback))

(ocamllex
 (modules cvt_emit)
 (mode    fallback))

(executable
  (name ocamldep)
  (modes byte native)
  (modules ocamldep)
  (libraries ocamlcommon ocamlbytecomp))

(install
  (files
    (ocamldep.bc as ocamldep.byte)
    (ocamldep.exe as ocamldep.opt)
  )
  (section bin)
  (package ocaml))

(executable
  (name cmpbyt)
  (modes byte)
  (modules cmpbyt)
  (libraries ocamlcommon ocamlbytecomp))

(library
  (name ocamlmklib_common)
  (modes byte native)
  (wrapped false)
  (modules ocamlmklibconfig)
  (libraries ocamlcommon ocamlbytecomp))

; We should fix this so it doesn't need "make".
(rule
  (targets ocamlmklibconfig.ml)
  (deps
    ../Makefile.config
    ../Makefile
    Makefile
    .depend)
  (action (run make -s %{targets})))

(executable
  (name ocamlmklib)
  (modes byte native)
  (modules ocamlmklib)
  (libraries ocamlcommon ocamlbytecomp ocamlmklib_common))

(install
  (files
    (ocamlmklib.bc as ocamlmklib.byte)
    (ocamlmklib.exe as ocamlmklib.opt)
  )
  (section bin)
  (package ocaml))

(executable
  (name ocamlmktop)
  (modes byte native)
  (modules ocamlmktop)
  (libraries ocamlcommon ocamlbytecomp))

(install
  (files
    (ocamlmktop.bc as ocamlmktop.byte)
    (ocamlmktop.exe as ocamlmktop.opt)
  )
  (section bin)
  (package ocaml))

(install
  (files
    eventlog_metadata
  )
  (section lib)
  (package ocaml))


; ocamlcp, ocamloptp and ocamlprof are not currently supported.
