;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
 (name ocamltoplevel)
 (wrapped false)
 (modes byte)
 (flags (:standard -principal -nostdlib))
 (libraries stdlib ocamlcommon ocamlbytecomp)
 (modules genprintval toploop trace topdirs topmain))

(executable
 (name topstart)
 (modes byte)
 ; Without -nopervasives the stdlib modules are specified twice, which
 ; causes errors.  Maybe this needs a dune fix?
 (flags (:standard -principal -nostdlib -linkall -nopervasives
   -cclib "-I ocaml/runtime" -cclib "-L ocaml/runtime" -cclib -lcamlrun))
 (link_deps (file ../stdlib/camlheader) (file ../runtime/libcamlrun.a))
 (libraries ocamlbytecomp ocamlcommon ocamltoplevel stdlib)
 (modules topstart))

(executable
 (name expunge)
 (modes byte)
 (flags (:standard -principal -nostdlib
   -cclib "-I ../runtime" -cclib "-L ../runtime" -cclib -lcamlrun))
 (link_deps (file ../stdlib/camlheader) (file ../runtime/libcamlrun.a))
 (libraries ocamlbytecomp ocamlcommon stdlib)
 (modules expunge))

(rule
 (targets byte)
 ; This should be generated from the stdlib modules files
 (action (run %{ocaml_where}/expunge %{dep:topstart.bc} %{targets}
                    stdlib__Arg
                    stdlib__Array
                    stdlib__ArrayLabels
                    stdlib__Bigarray
                    stdlib__Bool
                    stdlib__Buffer
                    stdlib__Bytes
                    stdlib__BytesLabels
                    stdlib__Callback
                    camlinternalFormat
                    camlinternalFormatBasics
                    camlinternalLazy
                    camlinternalMod
                    camlinternalComprehension
                    camlinternalOO
                    camlinternalAtomic
                    stdlib__Char
                    stdlib__Complex
                    stdlib__Digest
                    stdlib__Either
                    stdlib__Ephemeron
                    stdlib__Filename
                    stdlib__Float
                    stdlib__Format
                    stdlib__Fun
                    stdlib__Gc
                    stdlib__Genlex
                    stdlib__Hashtbl
                    stdlib__Int
                    stdlib__Int32
                    stdlib__Int64
                    stdlib__Lazy
                    stdlib__Lexing
                    stdlib__List
                    stdlib__ListLabels
                    stdlib__Map
                    stdlib__Marshal
                    stdlib__MoreLabels
                    stdlib__Nativeint
                    stdlib__Obj
                    stdlib__Oo
                    stdlib__Option
                    stdlib__Parsing
                    stdlib__Pervasives
                    stdlib__Printexc
                    stdlib__Printf
                    stdlib__Queue
                    stdlib__Random
                    stdlib__Result
                    stdlib__Scanf
                    stdlib__Seq
                    stdlib__Set
                    stdlib__Stack
                    stdlib__StdLabels
                    stdlib
                    stdlib__Stream
                    stdlib__String
                    stdlib__StringLabels
                    stdlib__Sys
                    stdlib__Uchar
                    stdlib__Unit
                    stdlib__Weak
                    ; the rest
                    outcometree topdirs toploop
 )))

(install
  (files
    (byte as ocaml)
  )
  (section bin)
  (package ocaml))

(install
  (files
    (expunge.bc as expunge)
    (.expunge.eobjs/byte/expunge.cmi as compiler-libs/expunge.cmi)
    (.expunge.eobjs/byte/expunge.cmt as compiler-libs/expunge.cmt)
    (ocamltoplevel.cma as compiler-libs/ocamltoplevel.cma)
    (genprintval.mli as compiler-libs/genprintval.mli)
    (trace.mli as compiler-libs/trace.mli)
    (topdirs.mli as compiler-libs/topdirs.mli)
    (toploop.mli as compiler-libs/toploop.mli)
    (topmain.mli as compiler-libs/topmain.mli)
    (.ocamltoplevel.objs/byte/genprintval.cmi as compiler-libs/genprintval.cmi)
    (.ocamltoplevel.objs/byte/genprintval.cmt as compiler-libs/genprintval.cmt)
    (.ocamltoplevel.objs/byte/genprintval.cmti as compiler-libs/genprintval.cmti)
    (.ocamltoplevel.objs/byte/trace.cmi as compiler-libs/trace.cmi)
    (.ocamltoplevel.objs/byte/trace.cmt as compiler-libs/trace.cmt)
    (.ocamltoplevel.objs/byte/trace.cmti as compiler-libs/trace.cmti)
    (.ocamltoplevel.objs/byte/topdirs.cmi as compiler-libs/topdirs.cmi)
    (.ocamltoplevel.objs/byte/topdirs.cmt as compiler-libs/topdirs.cmt)
    (.ocamltoplevel.objs/byte/topdirs.cmti as compiler-libs/topdirs.cmti)
    (.ocamltoplevel.objs/byte/toploop.cmi as compiler-libs/toploop.cmi)
    (.ocamltoplevel.objs/byte/toploop.cmt as compiler-libs/toploop.cmt)
    (.ocamltoplevel.objs/byte/toploop.cmti as compiler-libs/toploop.cmti)
    (.ocamltoplevel.objs/byte/topmain.cmi as compiler-libs/topmain.cmi)
    (.ocamltoplevel.objs/byte/topmain.cmt as compiler-libs/topmain.cmt)
    (.ocamltoplevel.objs/byte/topmain.cmti as compiler-libs/topmain.cmti)
    (.topstart.eobjs/byte/topstart.cmi as compiler-libs/topstart.cmi)
    (.topstart.eobjs/byte/topstart.cmo as compiler-libs/topstart.cmo)
    (.topstart.eobjs/byte/topstart.cmt as compiler-libs/topstart.cmt)
  )
  (section lib)
  (package ocaml))
