;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executable
 (name topstart)
 (modes byte)
 (flags (:standard -linkall))
 (libraries ocamlbytecomp ocamlcommon ocamltoplevel)
 (modules topstart))

(executable
 (name expunge)
 (modes byte)
 (libraries ocamlbytecomp ocamlcommon)
 (modules expunge))

(install
  (files
    (expunge.bc as expunge)
    (.expunge.eobjs/byte/expunge.cmi as compiler-libs/expunge.cmi)
    (.expunge.eobjs/byte/expunge.cmt as compiler-libs/expunge.cmt)
    (.topstart.eobjs/byte/topstart.cmi as compiler-libs/topstart.cmi)
    (.topstart.eobjs/byte/topstart.cmo as compiler-libs/topstart.cmo)
    (.topstart.eobjs/byte/topstart.cmt as compiler-libs/topstart.cmt)
  )
  (section lib)
  (package ocaml))
