;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (targets config.ml domainstate.ml domainstate.mli)
 (mode    fallback)
 (deps    (:mk Makefile)
          ../Makefile.config
          ../Makefile.common
          ../Makefile.config_if_required
          ../Makefile.build_config
          domainstate.ml.c
          domainstate.mli.c
          ../runtime/caml/domain_state.tbl
          config.mlp)
 (action  (system "make -sf %{mk} %{targets}")))
