;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (targets config.ml)
 (mode    fallback)
 (deps    config.generated.ml config.common.ml)
 (action
   (with-stdout-to %{targets}
     (system "cat %{deps}"))))

(rule
 (targets domainstate.ml)
 (mode    fallback)
 (deps    (:conf ../Makefile.config)
          (:c domainstate.ml.c)
          (:tbl ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml/domain_state.tbl)
          (glob_files ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml/{config,m,s}.h))
 (action
   (with-stdout-to %{targets}
     (bash
       "`grep '^CPP=' %{conf} | cut -d'=' -f2` -I ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml %{c}"
       ))))

(rule
 (targets domainstate.mli)
 (mode    fallback)
 (deps    (:conf ../Makefile.config)
          (:c domainstate.mli.c)
          (:tbl ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml/domain_state.tbl)
          (glob_files ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml/{config,m,s}.h))
 (action
   (with-stdout-to %{targets}
     (bash
       "`grep '^CPP=' %{conf} | cut -d'=' -f2` -I ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml %{c}"
       ))))
