;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                    Mark Shinwell, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2020 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
 (name bigarray)
 (wrapped false)
 (modes byte native)
 (flags (
   -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48-66
   -warn-error A -bin-annot -safe-string -strict-formats
 ))
 (ocamlopt_flags (:include %{project_root}/ocamlopt_flags.sexp))
 (library_flags (:standard -linkall)))

(install
  (files
    (.bigarray.objs/native/bigarray.cmx as bigarray/bigarray.cmx)
    (bigarray.cmxa as bigarray/bigarray.cmxa)
    (bigarray.a as bigarray/bigarray.a)
    (bigarray.cmxs as bigarray/bigarray.cmxs)
    (bigarray.cma as bigarray/bigarray.cma)
    (.bigarray.objs/byte/bigarray.cmi as bigarray/bigarray.cmi)
    (.bigarray.objs/byte/bigarray.cmt as bigarray/bigarray.cmt)
    (.bigarray.objs/byte/bigarray.cmti as bigarray/bigarray.cmti)
    (bigarray.mli as bigarray/bigarray.mli)
  )
  (section lib)
  (package ocaml))
