;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*           Mark Shinwell and Thomas Refis, Jane Street Europe           *
;*                                                                        *
;*   Copyright 2018--2020 Jane Street Group LLC                           *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
  (name dynlink_compilerlibs)
  (wrapped true)
  (modes byte native)
  (flags (
    -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48
    -warn-error A -bin-annot -safe-string -strict-formats
  ))
  (ocamlopt_flags (:include %{project_root}/ocamlopt_flags.sexp))
  (modules
    binutils
    local_store
    config
    build_path_prefix_map
    misc
    identifiable
    numbers
    arg_helper
    clflags
    profile
    consistbl
    terminfo
    warnings
    load_path
    int_replace_polymorphic_compare
    location
    longident
    docstrings
    syntaxerr
    ast_helper
    ast_mapper
    attr_helper
    builtin_attributes
    ident
    path
    primitive
    type_immediacy
    types
    btype
    subst
    predef
    datarepr
    cmi_format
    persistent_env
    env
    debuginfo
    lambda
    runtimedef
    instruct
    opcodes
    bytesections
    dll
    meta
    symtable)
  (modules_without_implementation
    ; Bug in Dune: copy_files rules don't trigger for these
    asttypes
    parsetree
    outcometree
    cmo_format
    cmxs_format
    debug_event))

;(install
;  (files
;    dynlink_compilerlibs.cma
;    dynlink_compilerlibs.cmxa
;    dynlink_compilerlibs.a
;  )
;  (section lib)
;  (package ocaml))

;; .ml:
(copy_files %{project_root}/ocaml/utils/binutils.ml)
(copy_files %{project_root}/ocaml/utils/local_store.ml)
(copy_files %{project_root}/ocaml/utils/config.ml)
(copy_files %{project_root}/ocaml/utils/build_path_prefix_map.ml)
(copy_files %{project_root}/ocaml/utils/misc.ml)
(copy_files %{project_root}/ocaml/utils/identifiable.ml)
(copy_files %{project_root}/ocaml/utils/numbers.ml)
(copy_files %{project_root}/ocaml/utils/arg_helper.ml)
(copy_files %{project_root}/ocaml/utils/clflags.ml)
(copy_files %{project_root}/ocaml/utils/profile.ml)
(copy_files %{project_root}/ocaml/utils/consistbl.ml)
(copy_files %{project_root}/ocaml/utils/terminfo.ml)
(copy_files %{project_root}/ocaml/utils/warnings.ml)
(copy_files %{project_root}/ocaml/utils/load_path.ml)
(copy_files %{project_root}/ocaml/utils/int_replace_polymorphic_compare.ml)
(copy_files %{project_root}/ocaml/parsing/location.ml)
(copy_files %{project_root}/ocaml/parsing/longident.ml)
(copy_files %{project_root}/ocaml/parsing/docstrings.ml)
(copy_files %{project_root}/ocaml/parsing/syntaxerr.ml)
(copy_files %{project_root}/ocaml/parsing/ast_helper.ml)
(copy_files %{project_root}/ocaml/parsing/ast_mapper.ml)
(copy_files %{project_root}/ocaml/parsing/attr_helper.ml)
(copy_files %{project_root}/ocaml/parsing/builtin_attributes.ml)
(copy_files %{project_root}/ocaml/typing/ident.ml)
(copy_files %{project_root}/ocaml/typing/path.ml)
(copy_files %{project_root}/ocaml/typing/primitive.ml)
(copy_files %{project_root}/ocaml/typing/type_immediacy.ml)
(copy_files %{project_root}/ocaml/typing/types.ml)
(copy_files %{project_root}/ocaml/typing/btype.ml)
(copy_files %{project_root}/ocaml/typing/subst.ml)
(copy_files %{project_root}/ocaml/typing/predef.ml)
(copy_files %{project_root}/ocaml/typing/datarepr.ml)
(copy_files %{project_root}/ocaml/file_formats/cmi_format.ml)
(copy_files %{project_root}/ocaml/typing/persistent_env.ml)
(copy_files %{project_root}/ocaml/typing/env.ml)
(copy_files %{project_root}/ocaml/lambda/debuginfo.ml)
(copy_files %{project_root}/ocaml/lambda/lambda.ml)
(copy_files %{project_root}/ocaml/lambda/runtimedef.ml)
(copy_files %{project_root}/ocaml/bytecomp/instruct.ml)
(copy_files %{project_root}/ocaml/bytecomp/opcodes.ml)
(copy_files %{project_root}/ocaml/bytecomp/bytesections.ml)
(copy_files %{project_root}/ocaml/bytecomp/dll.ml)
(copy_files %{project_root}/ocaml/bytecomp/meta.ml)
(copy_files %{project_root}/ocaml/bytecomp/symtable.ml)

;; .mli:
(copy_files %{project_root}/ocaml/utils/binutils.mli)
(copy_files %{project_root}/ocaml/utils/local_store.mli)
(copy_files %{project_root}/ocaml/utils/config.mli)
(copy_files %{project_root}/ocaml/utils/build_path_prefix_map.mli)
(copy_files %{project_root}/ocaml/utils/misc.mli)
(copy_files %{project_root}/ocaml/utils/identifiable.mli)
(copy_files %{project_root}/ocaml/utils/numbers.mli)
(copy_files %{project_root}/ocaml/utils/arg_helper.mli)
(copy_files %{project_root}/ocaml/utils/clflags.mli)
(copy_files %{project_root}/ocaml/utils/profile.mli)
(copy_files %{project_root}/ocaml/utils/consistbl.mli)
(copy_files %{project_root}/ocaml/utils/terminfo.mli)
(copy_files %{project_root}/ocaml/utils/warnings.mli)
(copy_files %{project_root}/ocaml/utils/load_path.mli)
(copy_files %{project_root}/ocaml/utils/int_replace_polymorphic_compare.mli)
(copy_files %{project_root}/ocaml/parsing/location.mli)
(copy_files %{project_root}/ocaml/parsing/longident.mli)
(copy_files %{project_root}/ocaml/parsing/docstrings.mli)
(copy_files %{project_root}/ocaml/parsing/syntaxerr.mli)
(copy_files %{project_root}/ocaml/parsing/ast_helper.mli)
(copy_files %{project_root}/ocaml/parsing/ast_mapper.mli)
(copy_files %{project_root}/ocaml/parsing/attr_helper.mli)
(copy_files %{project_root}/ocaml/parsing/builtin_attributes.mli)
(copy_files %{project_root}/ocaml/typing/ident.mli)
(copy_files %{project_root}/ocaml/typing/path.mli)
(copy_files %{project_root}/ocaml/typing/primitive.mli)
(copy_files %{project_root}/ocaml/typing/type_immediacy.mli)
(copy_files %{project_root}/ocaml/typing/types.mli)
(copy_files %{project_root}/ocaml/typing/btype.mli)
(copy_files %{project_root}/ocaml/typing/subst.mli)
(copy_files %{project_root}/ocaml/typing/predef.mli)
(copy_files %{project_root}/ocaml/typing/datarepr.mli)
(copy_files %{project_root}/ocaml/file_formats/cmi_format.mli)
(copy_files %{project_root}/ocaml/typing/persistent_env.mli)
(copy_files %{project_root}/ocaml/typing/env.mli)
(copy_files %{project_root}/ocaml/lambda/debuginfo.mli)
(copy_files %{project_root}/ocaml/lambda/lambda.mli)
(copy_files %{project_root}/ocaml/lambda/runtimedef.mli)
(copy_files %{project_root}/ocaml/bytecomp/instruct.mli)
(copy_files %{project_root}/ocaml/bytecomp/opcodes.mli)
(copy_files %{project_root}/ocaml/bytecomp/bytesections.mli)
(copy_files %{project_root}/ocaml/bytecomp/dll.mli)
(copy_files %{project_root}/ocaml/bytecomp/meta.mli)
(copy_files %{project_root}/ocaml/bytecomp/symtable.mli)
(copy_files %{project_root}/ocaml/bytecomp/debug_event.mli)

; .mli-only:
(copy_files %{project_root}/ocaml/parsing/asttypes.mli)
(copy_files %{project_root}/ocaml/parsing/parsetree.mli)
(copy_files %{project_root}/ocaml/typing/outcometree.mli)
(copy_files %{project_root}/ocaml/file_formats/cmo_format.mli)
(copy_files %{project_root}/ocaml/file_formats/cmxs_format.mli)

; We need support in dune for including all modules from another library
; (in this case Dynlink_compilerlibs) inside a library currently being
; built (in this case Dynlink); or a way that dynlink.cmxa can have an
; inbuilt dependency upon dynlink_compilerlibs.cmxa (which isn't possible
; at the moment, apparently Buenzli is working on this).
; We use a workaround for the moment.

; Deps within the compiler tree must be on dynlink_internal not dynlink.
(library
  (name dynlink_internal)
  (wrapped false)
  (modes byte native)
  (modules dynlink dynlink_common dynlink_types dynlink_platform_intf)
  (libraries dynlink_compilerlibs))

; The non-installed version of dynlink.cmi is needed to build other parts
; of the tree.
(rule
  (targets dynlink.cmi)
  (deps .dynlink_internal.objs/byte/dynlink.cmi)
  (action (copy %{deps} %{targets})))

(rule
  (targets dynlink.cma)
  (deps dynlink_internal.cma)
  (action
    (run %{ocamlc}
      -g -a
      %{read:natdynlinkops1}
      %{read:natdynlinkops2}
      -o dynlink.cma
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Binutils.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Local_store.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Build_path_prefix_map.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Config.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Misc.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Warnings.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Arg_helper.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Identifiable.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Numbers.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Profile.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Clflags.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Terminfo.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Location.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Ident.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Longident.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Path.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Types.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Syntaxerr.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Bytesections.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Cmi_format.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Int_replace_polymorphic_compare.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Debuginfo.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Btype.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Consistbl.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Datarepr.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Load_path.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Persistent_env.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Docstrings.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Ast_helper.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Builtin_attributes.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Type_immediacy.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Attr_helper.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Primitive.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Predef.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Ast_mapper.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Subst.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Env.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Lambda.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Dll.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Instruct.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Meta.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Runtimedef.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Symtable.cmo
      .dynlink_compilerlibs.objs/byte/dynlink_compilerlibs__Opcodes.cmo
      .dynlink_internal.objs/byte/dynlink_types.cmo
      .dynlink_internal.objs/byte/dynlink_platform_intf.cmo
      .dynlink_internal.objs/byte/dynlink_common.cmo
      .dynlink_internal.objs/byte/dynlink.cmo
    )
  )
)

(rule
  (targets dynlink.cmxa dynlink.a)
  (deps dynlink_internal.cmxa)
  (action
    (run %{ocamlopt}
      -g -a
      %{read:natdynlinkops1}
      %{read:natdynlinkops2}
      -o dynlink.cmxa
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Binutils.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Local_store.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Build_path_prefix_map.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Config.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Misc.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Warnings.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Arg_helper.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Identifiable.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Numbers.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Profile.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Clflags.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Terminfo.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Location.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Ident.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Longident.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Path.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Types.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Syntaxerr.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Bytesections.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Cmi_format.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Int_replace_polymorphic_compare.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Debuginfo.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Btype.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Consistbl.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Datarepr.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Load_path.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Persistent_env.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Docstrings.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Ast_helper.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Builtin_attributes.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Type_immediacy.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Attr_helper.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Primitive.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Predef.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Ast_mapper.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Subst.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Env.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Lambda.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Dll.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Instruct.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Meta.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Runtimedef.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Symtable.cmx
      .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Opcodes.cmx
      .dynlink_internal.objs/native/dynlink_types.cmx
      .dynlink_internal.objs/native/dynlink_platform_intf.cmx
      .dynlink_internal.objs/native/dynlink_common.cmx
      .dynlink_internal.objs/native/dynlink.cmx
    )
  )
)

(executable
 (name extract_crc)
 (modes byte)
 (flags (:standard -principal))
 (libraries
   dynlink_internal
 )
 (modules extract_crc))

(install
  (files
    .dynlink_internal.objs/native/dynlink_common.cmx
    .dynlink_internal.objs/native/dynlink_platform_intf.cmx
    .dynlink_internal.objs/native/dynlink_types.cmx
    .dynlink_internal.objs/native/dynlink.cmx
    dynlink.cma
    dynlink.cmxa
    dynlink.a
;    dynlink.cmxs
    dynlink.mli
    dynlink.cmi
    (.dynlink_internal.objs/byte/dynlink.cmti as dynlink.cmti)
    (extract_crc.bc as extract_crc)

    .dynlink_compilerlibs.objs/native/dynlink_compilerlibs__Misc.cmx
  )
  (section lib)
  (package ocaml))
